Added ASTMH work

--- a/pages/research.html
+++ b/pages/research.html
@@ -55,6 +55,25 @@ Licence URI: http://www.os-templates.com/template-terms
 
     <h1 id="malaria"><b>Malaria and Simulations for Health Policy</b></h1>
       <a><h2>Human Travel Patterns and Imported Malaria Cases</h2></a>
+      <p>In collaboration with the Bioko Island Malaria Elimination Program, we
+        have quantified the influence of human travel on malaria transmission patterns
+        on Bioko Island in Equatorial Guinea. Click <a href = "https://www.nature.com/articles/s41467-019-10339-1">here</a>
+        to read more about the project, in which we used a combination of mapping
+        and modeling techniques to argue that there is strong evidence of elevated
+        malaria risk among people who travel from Bioko Island to mainland Equatorial
+        Guinea.</p>
+      <p> <a href ="DTCitron_ASTMH_2019_Poster_1664.pdf">Here</a> is a poster on
+        building and utilizing simulation models of malaria transmission
+        to quantify the influence of human travel on malaria transmission patterns
+        on Bioko Island, presented in 2019 at the American Society for Tropical
+        Medicine and Hygiene conference.
+        <!-- <div class = "imgholder">
+          <a href="DTCitron_ASTMH_2019_Poster_1664.pdf" target="_blank">
+          <img src = "../images/DTCitron_ASTMH_2019_Poster_1664.jpeg" alt="" width="300" height="400"></a>
+        </div>
+        -->
+
+      </p>
       <a><h2>Characterizing Spatial Uncertainty for Policy</h2></a>
       <a><h2>Modeling with Human Travel Data</h2></a>
     <hr>
