Updated slides and posters from 2019

--- a/pages/research.html
+++ b/pages/research.html
@@ -62,11 +62,14 @@ Licence URI: http://www.os-templates.com/template-terms
         and modeling techniques to argue that there is strong evidence of elevated
         malaria risk among people who travel from Bioko Island to mainland Equatorial
         Guinea.</p>
-      <p> <a href ="DTCitron_ASTMH_2019_Poster_1664.pdf">Here</a> is a poster on
+      <p> <a href ="../images/DTCitron_ASTMH_2019_Poster_1664.pdf">Here</a> is a poster on
         building and utilizing simulation models of malaria transmission
         to quantify the influence of human travel on malaria transmission patterns
         on Bioko Island, presented in 2019 at the American Society for Tropical
-        Medicine and Hygiene conference.
+        Medicine and Hygiene conference. An earlier version of this analysis, first
+        completed in 2018, I presented at the 2019 Institute for Disease Modeling
+        Consortium (<a href="../images/DTCitron_Malaria_BI-2018.pdf">slides here</a>).
+      <p>
         <!-- <div class = "imgholder">
           <a href="DTCitron_ASTMH_2019_Poster_1664.pdf" target="_blank">
           <img src = "../images/DTCitron_ASTMH_2019_Poster_1664.jpeg" alt="" width="300" height="400"></a>
@@ -74,8 +77,18 @@ Licence URI: http://www.os-templates.com/template-terms
         -->
 
       </p>
-      <a><h2>Characterizing Spatial Uncertainty for Policy</h2></a>
       <a><h2>Modeling with Human Travel Data</h2></a>
+      <p>Through my work on travel and importations in collaboration with the Bioko
+        Island Malaria Elimination Program, I have investigated how one can use various
+        mechanistic models to represent human population movement patterns and have
+        come to realize that one must be very mindful of how one incorporates human
+        movement into mechanistic models of infectious disease. Specifically, infectious
+        disease models may have outcomes that are sensitive to how the modeler chooses
+        to represent movement within the model independent of infection model choice
+        or data used for parameterizing the model.
+      <p>I presented preliminary work on this model sensitivity at the Netsci 2019
+        conference (<a href ="../images/DTCitron_NetSci_Poster_2019.pdf">poster here</a>),
+        and gave a talk at the 2019 epidemics conference (<a href="../images/DTCitron_Epidemics-2019.pdf">slides here</a>).
     <hr>
 
     <h1 id="structure"><b>Structural Analysis of Networks</b></h1>
