Updating landing page

--- a/index.html
+++ b/index.html
@@ -89,30 +89,19 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="container">
       <div id="content">
         <h1>Research Interests</h1>
-        <p>I am a postdoctoral fellow at the University of Washington, appointed
-          within the <a href="https://depts.washington.edu/healthms/">Department of Health Metrics Sciences</a>
-          and affiliated with the <a href="http://www.healthdata.org">Institute for Health Metrics and Evaluation</a>.
-          My academic interest is applying mathematical models to problems related to
-          public health and health policy.  Currently, I build computational tools to assist
-          policy makers with planning strategic decisions for eliminating and
-          controlling malaria.  I work with David L. Smith's research team at IHME.
-        </p>
-        <h2>Current Projects</h2>
-        <p>
-          <ul>
-            <li><b>Human Travel Patterns and Imported Malaria Cases</b></li>
+        <p>I am a research scientist in the field of mathematical epidemiology. I develop and construct simulation models of infectious disease dynamics to assist with policy decision making. My current focus is on understanding how host travel patterns contribute to epidemiological patterns: how does routine commuting or infrequent long-distance travel drive and sustain outbreaks of infectious disease? I am currently working to develop data sets which will allow epidemiologists access to quantitative estimates of how travel contributes to contact and mixing across geographical space.</p>
 
-            <li><b>Modeling with Human Travel Data</b></li>
+        <p>My graduate training is in physics. During my doctoral studies I focused on topics related to interdisciplinary computational science and network science. Half of my research was related to simulation modeling of infectious diseases on networks, exploring how contact network structure can affect outbreaks of endemic disease by changing the population's critical community size. The other half of my research was related to studying the patterns that arise in scientific literature - identifying networks of scientific articles connected through plagiarized content, and using machine learning to identify networks of scientific subdisciplines and mapping how they grow over time.</p>
 
-          </ul>
-        </p>
-        <h1>Previous Projects</h1>
-        <p>As a PhD student in the field of Physics at Cornell University, I worked
-          on several projects related to complex networks.  One set of projects
-          focused on network epidemiology.  Another set of projects focused on
-          data-driven explorations of publishing practices in the scientific community.
-        </p>
-        <p>
+        <p>My postdoctoral research is related to building simulations of malaria transmission as analytical tools for policy makers. From 2017-2019, I worked with the Bioko Island Malaria Elimination Program to develop a simulation model for quantifying the impact of future interventions on Bioko Island in Equatorial Guinea. This work required understanding the epidemiological data and then collaborating with programmers to develop and calibrate our simulation model. We were able to quantify the important role that imported cases play in maintaining high prevalence on the island.</p>
+
+        <p>Understanding human movement and travel patterns is crucial for understanding disease transmission in many different settings. The recent availability of new data streams, in the form of movement history data collected from mobile phone usage, presents an exciting opportunity to understand travel patterns at an unprecedented geographical scale. I am currently working as a visiting researcher alongside the Facebook Data for Good team to develop new data sets on human travel for epidemiological purposes.</p>
+        <!-- <h1>Previous Work</h1>
+        <p>From 2017-2019 I was a postdoctoral fellow with Professor David L. Smith's malaria elimination research team at the University of Washington, appointed within the <a href="https://depts.washington.edu/healthms/">Department of Health Metrics Sciences</a> and affiliated with the <a href="http://www.healthdata.org">Institute for Health Metrics and Evaluation</a>.
+        </p>  
+        <p>I finished my doctoral dissertation in the field of Physics at Cornell University in 2017.  My primary advisor was Professsor Christopher R. Myers. </p>
+      -->
+        <!-- <p>
           <ul>
             <li><b>Infectious Disease Dynamics on Networks</b></li>
             I studied how contact network structure changes critical community
@@ -148,7 +137,7 @@ Licence URI: http://www.os-templates.com/template-terms
             it received.
             See our published article <a href="https://arxiv.org/abs/1412.2716"><b>here</b></a>.
           </ul>
-        </p>
+        </p> -->
 <!--        <p> My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">
         Christopher R. Myers</a>, who has an interest in dynamics on complex networks and
         modeling infectious diseases.  My work with the Myers group has focused on creating
@@ -168,7 +157,7 @@ Licence URI: http://www.os-templates.com/template-terms
         In 2012 I was awarded a National Science Foundation GRFP Fellowship.</p>
         <p>Read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
 -->
-		<hr>
+<!--		<hr>
         <h2>Code for Simulations</h2>
         <p class="readmore">I am committed to sharing any and all research-related code.
         I have developed a few different scripts for simulating disease outbreaks on
@@ -184,10 +173,12 @@ Licence URI: http://www.os-templates.com/template-terms
         <h1>Current CV</h1>
         <p class="readmore">View my current CV <a href = "pages/DTCitron_CV.pdf"><b>here &raquo;</b></a></p>
         <p class="readmore">LinkedIn profile <a href="https://www.linkedin.com/in/daniel-citron-9339449/"><b>here &raquo;</b></a></p>
+        -->
 <!--
 		<p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron">  LinkedIn profile <b> here &raquo; </b></a> </p>
 -->
 
+<!--
         <p>Please feel free to contact me if you have any questions:
           <b>
           <script type="text/javascript">
@@ -198,6 +189,8 @@ Licence URI: http://www.os-templates.com/template-terms
           </script>
           </b>
         </p>
+-->
+
 
       </div>
 <!-- ### Create columns with previews of stuff -->
@@ -257,9 +250,9 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Institute for Health Metrics and Evaluation</li>
+          <!-- <li>Institute for Health Metrics and Evaluation</li>
           <li>University of Washington</li>
-          <li>Seattle, WA</li>
+          <li>Seattle, WA</li>-->
           <li>
             <b>Email Me:
             <script type="text/javascript">
