--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -89,9 +89,9 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Institute for Health Metrics and Evaluation</li>
+          <!-- <li>Institute for Health Metrics and Evaluation</li>
           <li>University of Washington</li>
-          <li>Seattle, WA</li>
+          <li>Seattle, WA</li>-->
           <li>
             <b>Email Me:
             <script type="text/javascript">
