Fixing contact info and materials on front page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | University of Washington, IHME </title>
+<title>Daniel T. Citron</title>
 
 <!--google analytics script -->
 <script type="text/javascript">
@@ -28,7 +28,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="wrapper col1">
     <div id="head">
       <h1><a href="index.html">Daniel T. Citron</a></h1>
-      <p>Postdoctoral Fellow, University of Washington, IHME</p>
+      <!-- <p>Postdoctoral Fellow, University of Washington, IHME</p> -->
       <div id="topnav">
         <ul>
           <li><a class="active" href="index.html">About Me</a></li>
@@ -168,12 +168,19 @@ Licence URI: http://www.os-templates.com/template-terms
         <h1>Teaching and Outreach</h1>
         <p>View my teaching portfolio <b><a href="pages/portfolio/index.html">here &raquo;
           </a></b></p>
-
-        <hr>
-        <h1>Current CV</h1>
-        <p class="readmore">View my current CV <a href = "pages/DTCitron_CV.pdf"><b>here &raquo;</b></a></p>
-        <p class="readmore">LinkedIn profile <a href="https://www.linkedin.com/in/daniel-citron-9339449/"><b>here &raquo;</b></a></p>
         -->
+        <hr>
+        <h1>Links</h1>
+        <p class="readmore">View my current CV <a href = "pages/DTCitron_CV.pdf"><b>here &raquo;</b></a></p>
+
+        <p class="readmore">Github <a href = "https://github.com/dtcitron"><b>here &raquo;</b></a></p>
+
+        <p class="readmore">Google Scholar <a href = "https://scholar.google.com/citations?user=nLYvjEgAAAAJ&hl=en&oi=ao"><b>here &raquo;</b></a></p>
+
+        <p class="readmore">LinkedIn profile <a href="https://www.linkedin.com/in/daniel-citron-9339449/"><b>here &raquo;</b></a></p>
+
+        <p class="readmore">Twitter <a href="https://twitter.com/citron_daniel"><b>here &raquo;</b></a></p>
+
 <!--
 		<p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron">  LinkedIn profile <b> here &raquo; </b></a> </p>
 -->
