--- a/pages/portfolio/course_planning.html
+++ b/pages/portfolio/course_planning.html
@@ -316,13 +316,13 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- javascript for automatically-updating date of modification -->
 <!-- taken from https://forums.techguy.org/threads/how-can-i-get-an-automatic-last-updated-in-my-web-page.693929/ -->
 <script type="text/javascript">
-<!--
-var m = "Last updated: " + document.lastModified;
-var p = m.length-8;
-document.writeln("<left>");
-document.write(m.substring(p, 0));
-document.writeln("</left>");
- -->
+  <!---->
+  var m = "Last updated: " + document.lastModified;
+  var p = m.length-8;
+  document.writeln("<left>");
+  document.write(m.substring(p, 0));
+  document.writeln("</left>");
+  -->
 </script>
     </div>
 
@@ -351,7 +351,6 @@ document.writeln("</left>");
   </div>
 </div>
 
-
 <!-- ### Put contact information here -->
 <div class="wrapper col5">
   <div id="footer">
@@ -359,9 +358,9 @@ document.writeln("</left>");
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Institute for Health Metrics and Evaluation</li>
+          <!-- <li>Institute for Health Metrics and Evaluation</li>
           <li>University of Washington</li>
-          <li>Seattle, WA</li>
+          <li>Seattle, WA</li>-->
           <li>
             <b>Email Me:
             <script type="text/javascript">
