--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | University of Washington, IHME </title>
+<title>Daniel T. Citron | Physics GRE Prep </title>
 
 <!--google analytics script -->
 <script>
@@ -30,7 +30,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col1">
   <div id="head">
     <h1><a href="index.html">Daniel T. Citron</a></h1>
-    <p>Postdoctoral Fellow, University of Washington, IHME</p>
+      <!-- <p>Postdoctoral Fellow, University of Washington, IHME</p> -->
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
