--- a/pages/portfolio/effectiveness.html
+++ b/pages/portfolio/effectiveness.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | University of Washington, IHME </title>
+<title>Daniel T. Citron | Teaching Portfolio </title>
 
 <!--google analytics script -->
 <script>
@@ -43,7 +43,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col1">
   <div id="head">
     <h1><a href="index.html">Daniel T. Citron</a></h1>
-    <p>Postdoctoral Fellow, University of Washington, IHME</p>
+    <!-- <p>Postdoctoral Fellow, University of Washington, IHME</p> -->
     <div id="topnav">
       <ul>
         <li><a href="../../index.html">About Me</a></li>
@@ -254,15 +254,18 @@ document.writeln("</left>");
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me:
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <!-- <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>-->
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
